# electron_doped_cuprates

./: .gitignore  README.md  job_script.py  pyproject.toml  requirements.txt  submit.sh
HF_results_for_cluster/10x10/: Nx_10_Ny_10_TDHF_energies.npy  Nx_10_Ny_10_TDHF_factor_Ws.npy  Nx_10_Ny_10_TDHF_velocity.npy  Nx_10_Ny_10_TDHF_wavefunctions.npy  Nx_10_Ny_10_g_spin_q.npy  Nx_10_Ny_10_hash_tables.npy
src/: utilities.py
src/cuprates/: Hubbard_HF.py  __init__.py  bound_state_ED.py  job_script.py  requirements.txt  vertices.py
src/cuprates.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
