[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "cuprates"
version = "0.1.0"
description = "Tools for Hartree-Fock and ED studies"
authors = [{name="Mina-Lou Schleith",email="minalou.schleith@gmail.com"}]
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
	"numpy", 
	"matplotlib", 
	"seaborn",
	"scipy"
]
[tool.setuptools.packages.find]
where = ["src"]
